--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,17 @@
           <url>s3://maven-repository-jrkoiter/snapshot</url>
       </snapshotRepository>
   </distributionManagement>
-
+  
+  <build>
+    <plugins>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-release-plugin</artifactId>
+         <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
+  
   <!-- 
     Install (proprietary) Oracle dependency into local repository as follows:
 
