--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>nl.fuselogic</groupId>
   <artifactId>robotframework-oimclientlibrary</artifactId>
-  <version>0.2</version>
+  <version>0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,7 +13,7 @@
 
   <scm>
     <connection>scm:git:https://github.com/jrkoiter/robotframework-oimclientlibrary.git</connection>
-    <tag>0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
