--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
   <version>0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     <maven.compiler.target>1.7</maven.compiler.target>
+     <maven.compiler.source>1.7</maven.compiler.source>
   </properties>
 
   <name>Robot Framework Oim Client Library</name>
@@ -92,7 +94,7 @@
   <repositories>
     <repository>
       <id>my-local-repo</id>
-      <url>file://${basedir}/my-repo</url>
+      <url>file://${basedir}/./my-repo</url>
     </repository>
   </repositories>
   
