--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>nl.fuselogic</groupId>
   <artifactId>robotframework-oimclientlibrary</artifactId>
-  <version>0.3-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,6 +26,13 @@
       <organization>FuseLogic</organization>
       <organizationUrl>http://www.fuselogic.nl</organizationUrl>
     </developer>
+      <developer>
+          <id>khendriks</id>
+          <name>Kees Hendriks</name>
+          <email>kees.hendriks@fuselogic.nl</email>
+          <organization>FuseLogic</organization>
+          <organizationUrl>http://www.fuselogic.nl</organizationUrl>
+      </developer>
   </developers>
 
   <build>
@@ -61,7 +68,7 @@
     <dependency>
       <groupId>oracle.iam.platform</groupId>
       <artifactId>oimclient</artifactId>
-      <version>11.1.2.2.0</version>
+      <version>12.2.1.3.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -87,7 +94,7 @@
   <!-- 
     Install (proprietary) Oracle dependency into local repository as follows:
 
-    mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=/path/to/oimclient/oimclient.jar -DgroupId=oracle.iam.platform -DartifactId=oimclient -Dversion=11.1.2.2.0 -Dpackaging=jar -DlocalRepositoryPath=/path/to/robotframework-oimclientlibrary/my-repo
+    mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=/path/to/oimclient/oimclient.jar -DgroupId=oracle.iam.platform -DartifactId=oimclient -Dversion=12.2.1.3.0 -Dpackaging=jar -DlocalRepositoryPath=/path/to/robotframework-oimclientlibrary/my-repo
 
     Source: http://stackoverflow.com/questions/2229757/maven-add-a-dependency-to-a-jar-by-relative-path/2230464#2230464
   -->
