--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>nl.fuselogic</groupId>
   <artifactId>robotframework-oimclientlibrary</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,9 +66,10 @@
       <version>1.2.1</version>
     </dependency>
     <dependency>
-      <groupId>oracle.iam.platform</groupId>
+      <groupId>oracle.oim</groupId>
       <artifactId>oimclient</artifactId>
-      <version>12.2.1.3.0</version>
+      <version>12.2.1.4.0</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
